--- a/server-provider/src/main/resources/application-dev.yml
+++ b/server-provider/src/main/resources/application-dev.yml
@@ -10,8 +10,8 @@ spring:
   datasource:
     driverClassName: com.mysql.cj.jdbc.Driver
     url: jdbc:mysql://localhost:3306/moviedb?useUnicode=true&characterEncoding=utf-8
-    username: moviedb_manager
-    password: 123
+    username: root
+    password:
     druid:
-      initial-size: 5
+      initial-size: 1
       max-active: 10
